add auth middelware
