# internal/service/handlers/change_username.go
@@ -1,0 +1,17 @@
+package handlers
+
+import (
+	"net/http"
+)
+
+func ChangeUsername(w http.ResponseWriter, r *http.Request) {
+	//req, err := requests.NewChangeUsername(r)
+	//if err != nil {
+	//	httpresp.RenderErr(w, problems.BadRequest(err)...)
+	//	return
+	//}
+
+	//pas := req.Data.Attributes.Password
+	//newusr := req.Data.Attributes.NewUsername
+
+}
