# resources/model_change_username.go
@@ -1,0 +1,158 @@
+/*
+Example API
+
+This is a sample API.
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ChangeUsername type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ChangeUsername{}
+
+// ChangeUsername struct for ChangeUsername
+type ChangeUsername struct {
+	Data ChangeUsernameData `json:"data"`
+}
+
+type _ChangeUsername ChangeUsername
+
+// NewChangeUsername instantiates a new ChangeUsername object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewChangeUsername(data ChangeUsernameData) *ChangeUsername {
+	this := ChangeUsername{}
+	this.Data = data
+	return &this
+}
+
+// NewChangeUsernameWithDefaults instantiates a new ChangeUsername object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewChangeUsernameWithDefaults() *ChangeUsername {
+	this := ChangeUsername{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *ChangeUsername) GetData() ChangeUsernameData {
+	if o == nil {
+		var ret ChangeUsernameData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *ChangeUsername) GetDataOk() (*ChangeUsernameData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Data, true
+}
+
+// SetData sets field value
+func (o *ChangeUsername) SetData(v ChangeUsernameData) {
+	o.Data = v
+}
+
+func (o ChangeUsername) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ChangeUsername) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	return toSerialize, nil
+}
+
+func (o *ChangeUsername) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varChangeUsername := _ChangeUsername{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varChangeUsername)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ChangeUsername(varChangeUsername)
+
+	return err
+}
+
+type NullableChangeUsername struct {
+	value *ChangeUsername
+	isSet bool
+}
+
+func (v NullableChangeUsername) Get() *ChangeUsername {
+	return v.value
+}
+
+func (v *NullableChangeUsername) Set(val *ChangeUsername) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableChangeUsername) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableChangeUsername) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableChangeUsername(val *ChangeUsername) *NullableChangeUsername {
+	return &NullableChangeUsername{value: val, isSet: true}
+}
+
+func (v NullableChangeUsername) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableChangeUsername) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
