# resources/model_change_username_data.go
@@ -1,0 +1,186 @@
+/*
+Example API
+
+This is a sample API.
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ChangeUsernameData type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ChangeUsernameData{}
+
+// ChangeUsernameData struct for ChangeUsernameData
+type ChangeUsernameData struct {
+	Type string `json:"type"`
+	Attributes ChangeUsernameDataAttributes `json:"attributes"`
+}
+
+type _ChangeUsernameData ChangeUsernameData
+
+// NewChangeUsernameData instantiates a new ChangeUsernameData object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewChangeUsernameData(type_ string, attributes ChangeUsernameDataAttributes) *ChangeUsernameData {
+	this := ChangeUsernameData{}
+	this.Type = type_
+	this.Attributes = attributes
+	return &this
+}
+
+// NewChangeUsernameDataWithDefaults instantiates a new ChangeUsernameData object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewChangeUsernameDataWithDefaults() *ChangeUsernameData {
+	this := ChangeUsernameData{}
+	return &this
+}
+
+// GetType returns the Type field value
+func (o *ChangeUsernameData) GetType() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Type
+}
+
+// GetTypeOk returns a tuple with the Type field value
+// and a boolean to check if the value has been set.
+func (o *ChangeUsernameData) GetTypeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Type, true
+}
+
+// SetType sets field value
+func (o *ChangeUsernameData) SetType(v string) {
+	o.Type = v
+}
+
+// GetAttributes returns the Attributes field value
+func (o *ChangeUsernameData) GetAttributes() ChangeUsernameDataAttributes {
+	if o == nil {
+		var ret ChangeUsernameDataAttributes
+		return ret
+	}
+
+	return o.Attributes
+}
+
+// GetAttributesOk returns a tuple with the Attributes field value
+// and a boolean to check if the value has been set.
+func (o *ChangeUsernameData) GetAttributesOk() (*ChangeUsernameDataAttributes, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Attributes, true
+}
+
+// SetAttributes sets field value
+func (o *ChangeUsernameData) SetAttributes(v ChangeUsernameDataAttributes) {
+	o.Attributes = v
+}
+
+func (o ChangeUsernameData) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ChangeUsernameData) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["type"] = o.Type
+	toSerialize["attributes"] = o.Attributes
+	return toSerialize, nil
+}
+
+func (o *ChangeUsernameData) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"type",
+		"attributes",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varChangeUsernameData := _ChangeUsernameData{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varChangeUsernameData)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ChangeUsernameData(varChangeUsernameData)
+
+	return err
+}
+
+type NullableChangeUsernameData struct {
+	value *ChangeUsernameData
+	isSet bool
+}
+
+func (v NullableChangeUsernameData) Get() *ChangeUsernameData {
+	return v.value
+}
+
+func (v *NullableChangeUsernameData) Set(val *ChangeUsernameData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableChangeUsernameData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableChangeUsernameData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableChangeUsernameData(val *ChangeUsernameData) *NullableChangeUsernameData {
+	return &NullableChangeUsernameData{value: val, isSet: true}
+}
+
+func (v NullableChangeUsernameData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableChangeUsernameData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
